--- a/myStyle.scss
+++ b/myStyle.scss
@@ -6,7 +6,6 @@
 div {
     font-family: sans-serif;
 
-
     #main_logo {
         @extend %center;
         display: block;
@@ -18,11 +17,33 @@ div {
     }
 }
 
+@media (max-width: 575px) {
+    #menu_list, .col-sm {
+        border: 3px solid #c8102e;
+    }
+}
+
 #menu_list {
-    background-color: #0d2b56;
+    background-color: #0c2340;
 }
 
 .container {
     background-color: #f0f5f5;
     height:100vh;
+}
+
+.text-center {
+    margin-top: 10px;
+}
+
+li:hover {
+    background-color: #4a777a;
+}
+
+a:active {
+    background-color: #ffffff;
+}
+
+a:visited {
+    color: #c8102e;
 }
