--- a/myStyle.scss
+++ b/myStyle.scss
@@ -1,3 +1,8 @@
+$soxgray: #f0f5f5;
+$soxblue: #0c2340;
+$soxred: #c8102e;
+$soxgreen: #4a777a;
+
 %center {
     margin-left: auto;
     margin-right: auto;
@@ -19,16 +24,16 @@ div {
 
 @media (max-width: 575px) {
     #menu_list, .col-sm {
-        border: 3px solid #c8102e;
+        border: 3px solid $soxred;
     }
 }
 
 #menu_list {
-    background-color: #0c2340;
+    background-color: $soxblue;
 }
 
 .container {
-    background-color: #f0f5f5;
+    background-color: $soxgray;
     height:100vh;
 }
 
@@ -37,7 +42,7 @@ div {
 }
 
 li:hover {
-    background-color: #4a777a;
+    background-color: $soxgreen;
 }
 
 a:active {
@@ -45,5 +50,5 @@ a:active {
 }
 
 a:visited {
-    color: #c8102e;
+    color: $soxred;
 }
